# photo-scaler

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/photo_scaler/: logic.py
tests/: test_scaler.py
